--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,8 @@
   padding: 0;
   text-decoration: none;
   box-sizing: border-box;
+  
+  /* font-family: sans-serif; */
   /* scrollbar-width: thin;
   scrollbar-color: var(--color-tomato) #DFE9EB; */
 }
@@ -112,6 +114,20 @@ body {
   }
 
 }
+
+.error_page{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  gap: 10px;
+  opacity: 0.71;
+  background: #000;
+}
+
 
 
 
@@ -505,7 +521,7 @@ nav {
 
 .Explore_Influencers {
   background-color: var(--color-light-black);
-
+  padding-top: 50px;
 }
 
 .Explore_Sport_Influencers>span,
@@ -676,7 +692,10 @@ nav {
   height: 42px;
   border-radius: 7px;
   background: #2D477D;
+  border-style: none;
+  color: #fff;
   font-weight: 900;
+  cursor: pointer;
 }
 
 
@@ -827,9 +846,8 @@ nav {
 }
 
 .lorem_ipsum_dolor {
-  white-space: normal;
   text-align: justify;
-  font-size: 13.2px !important;
+  font-size: 15px !important;
   line-height: 24px !important;
 }
 
@@ -1486,6 +1504,18 @@ footer {
 
   }
 
+  .close_modal_btn {
+    cursor: pointer;
+    background: transparent;
+    border-style: none;
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    color: white;
+    z-index: 1000;
+  }
+
+  
   .banner_play {
     background-image: url(../assets/play.svg);
     background-size: 78px;
@@ -1650,7 +1680,7 @@ footer {
     height: 30.973px;
     background-size: 60%;
     right: 10px;
-    bottom: 76px;
+    bottom: 75px;
     z-index: 1;
   }
 
@@ -2249,8 +2279,8 @@ footer {
   }
 
   .coming_soon_para {
-
     font-size: 14px;
+    line-height: 20px;
     width: 90%;
   }
 
@@ -2258,6 +2288,7 @@ footer {
     width: 90%;
     height: 45px;
     border-radius: 7px;
+    border: none;
     background: #2D477D;
   }
 
